--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "autoprefixer": "^10.4.16",
     "framer-motion": "^12.23.24",
     "next": "^16.0.1",
+    "postcss": "^8.4.32",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "autoprefixer": "^10.4.16",
     "eslint": "^9.0.0",
     "eslint-config-next": "^16.0.1",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
   }
 }
